<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="total_amount">Total amount</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="category_name">Category Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>